[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/Bumpo.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Art/coinIcon.png" type="Texture" id=2]
[ext_resource path="res://Styles/Buttons/CenterButtons/center_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Styles/Buttons/CenterButtons/center_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://Art/rewardAdsBtn.png" type="Texture" id=5]
[ext_resource path="res://Scripts/WatchVideoButton.gd" type="Script" id=6]
[ext_resource path="res://Styles/Buttons/CenterButtons/center_disabled.tres" type="StyleBox" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
extra_spacing_top = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
extra_spacing_top = 6
font_data = ExtResource( 1 )

[node name="GetCoinButton" type="Button"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -97.0
margin_top = -127.0
margin_right = 98.0
margin_bottom = -63.9996
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 4 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -20.0
margin_right = -8.0
margin_bottom = 20.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="icon"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -19.5
margin_right = -8.0
margin_bottom = 19.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0.0392157, 0.521569, 0.160784, 1 )
text = "+200"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon2" type="TextureRect" parent="."]
modulate = Color( 0.0392157, 0.521569, 0.160784, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -20.0
margin_right = 48.0
margin_bottom = 20.0
texture = ExtResource( 5 )
expand = true

[node name="time" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.5
margin_top = -30.5002
margin_right = 98.5
margin_bottom = 32.4998
custom_fonts/font = SubResource( 3 )
text = "02:50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
[connection signal="pressed" from="." to="." method="_on_GetCoinButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
